<resources>
    <string name="app_name">SpaceFarmer</string>

    <string name="left_arrow">⬅</string>
    <string name="up_arrow">⬆</string>
    <string name="down_arrow">⬇</string>
    <string name="right_arrow">➡</string>
    <string name="plant">🌱 Plant</string>
    <string name="planet_background">Planet Background</string>
    <string name="score">Score: 0</string>
    <string name="health">Health: 3</string>
    <string name="boss_health">BOSS HEALTH</string>
    <string name="farmer">👨‍🌾</string>
    <string name="start_mission">Start Mission</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="move_left">Move Left</string>
    <string name="move_right">Move Right</string>
    <string name="throw_shovel">Throw Shovel</string>
    <string name="tutorial_text_here">TUTORIAL TEXT HERE</string>
    <string name="next">NEXT ></string>
    <string name="tutorial_powerups">Look out for helpful power-ups that enemies can drop! 🛡️ gives you a temporary shield, and 💨 gives you a speed boost!</string>

</resources>